--- a/src/views/pages/publications/subpages/dates/08-10.njk
+++ b/src/views/pages/publications/subpages/dates/08-10.njk
@@ -1,12 +1,11 @@
 {% set pub2010 = [
 
   {
-    authors: '<b>Kaundal R.</b> and Zhao P.X.',
+    authors: 'Kaundal R. and Zhao P.X.',
     location: 'The 18 th Annual International Conference on Intelligent Systems for Molecular Biology (ISMB); Boston (MA), USA',
     desc: 'A systematic approach to predicting organism-specific subcellular localization suggests species-specific sorting patterns.',
-    year: '2010',
     date: 'Jul 10-14',
-    type: []
+    type: ''
   }
 
 ]
@@ -15,12 +14,11 @@
 {% set pub2009 = [
 
   {
-    authors: '<b>Kaundal R.</b> and Zhao P.X.',
+    authors: 'Kaundal R. and Zhao P.X.',
     location: 'American Society of Plant Biologists (ASPB) meeting; Honolulu, Hawaii, USA',
     desc: 'ASLpred: Arabidopsis Subcellular Localization predictor.',
-    year: '2009',
     date: 'Jul 18-22',
-    type: []
+    type: ''
   }
 
 ]
@@ -29,12 +27,11 @@
 {% set pub2008 = [
 
   {
-    authors: '<b>Kaundal R.</b> and Zhao P.X.',
+    authors: 'Kaundal R. and Zhao P.X.',
     location: 'Plant and Animal Genomes conference XVI (PAG meeting); San Diego (CA), USA',
     desc: 'An integrated prediction system for protein subcellular localization in Arabidopsis.',
-    year: '2008',
     date: 'Jan 12-16',
-    type: []
+    type: ''
   }
 
 ]
