--- a/src/views/pages/publications/subpages/dates/11-13.njk
+++ b/src/views/pages/publications/subpages/dates/11-13.njk
@@ -1,111 +1,99 @@
 {% set pub2013 = [
 
   {
-    authors: '<i><u>Moncrief R., Weirick T.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i><u>Moncrief, R.</u></i>,<i><u>Weirick T.</u></i> and Kaundal R<sup>*</sup>.',
     location: 'International Plant Genomics Congress; St. Louis (MO), USA',
     desc: 'Deciphering genome-scale host-pathogen Protein Interaction Networks using Artificial Intelligence and its applicability to select agents.',
-    year: '2013',
     date: 'Sep 23-24',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<i>Sahu S.S.,<u> Weirick T., Moncrief R.</u></i> and <b>Kaundal, R<sup>*</sup>.</b>',
+    authors: 'Sahu S.S.,<u><i>Weirick T.</i></u>,<i><u> Moncrief, R.</u></i> and Kaundal, R<sup>*</sup>.',
     location: 'BMB Annual Research Symposium; OSU Stillwater (OK), USA',
     desc: 'A Bioinformatics Approach to Predict Host- Pathogen Protein-Protein Interactions Network.',
-    year: '2013',
     date: 'Sep 19',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<i><u>Weirick T.</u></i>, Fathepure B.Z., Mahalingam R. and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i><u>Weirick T.</u></i>, Fathepure B.Z., Mahalingam R. and Kaundal R<sup>*</sup>.',
     location: 'NSF EPSCoR Annual Bioenergy Conference; Oklahoma State University, Stillwater (OK), USA',
     desc: 'LigPred: a Comprehensive Prediction System for the Identification and Classification of Enzymes Related to the Synthesis and Degradation of Lignin.',
-    year: '2013',
     date: 'Apr 23',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<i><u>Weirick T.</u></i>, Fathepure B.Z., Mahalingam R. and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i><u>Weirick T.</u></i>, Fathepure B.Z., Mahalingam R. and Kaundal R<sup>*</sup>.',
     location: 'NSF EPSCoR Annual Bioenergy Conference; Oklahoma State University, Stillwater (OK), USA',
     desc: 'LigPred: a Comprehensive Prediction System for the Identification and Classification of Enzymes Related to the Synthesis and Degradation of Lignin.',
-    year: '2013',
     date: 'Sep 19',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<b>Kaundal R<sup>*</sup></b>. and Verma R<sup>^</sup>.',
+    authors: 'Kaundal R<sup>*</sup>. and Verma R<sup>^</sup>.',
     location: 'The X th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Missouri, Columbia (MO), USA',
     desc: 'PLpred: a bioinformatics system for the identification and classification of plastid type proteins.',
-    year: '2013',
     date: 'Apr 5-6',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<u><i>Moncrief R.</i></u> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<u><i>Moncrief, R.</i></u> and Kaundal R<sup>*</sup>.',
     location: 'The X th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Missouri, Columbia (MO), USA',
     desc: 'Bioinformatics Approaches to Deciphering Host-Pathogen Protein Interaction Networks (PINs).',
-    year: '2013',
     date: 'Apr 5-6',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<i>Sahu S.S.</i> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i>Sahu S.S.</i> and Kaundal R<sup>*</sup>.',
     location: 'The X th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Missouri, Columbia (MO), USA',
     desc: 'Predicting Multi-target Protein Subcellular Localization combining homology and Machine Learning Approaches.',
-    year: '2013',
     date: 'Apr 5-6',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'Ahmed F.,<b> Kaundal R.</b> and Raghava G.P.S.',
+    authors: 'Ahmed F., Kaundal R. and Raghava G.P.S.',
     location: 'The X th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Missouri, Columbia (MO), USA',
     desc: 'PHDcleav: a SVM-based method for predicting human Dicer cleavage sites using sequence and secondary structure of miRNA precursors.',
-    year: '2013',
     date: 'Apr 5-6',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<u><i>Moncrief R.</i></u> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<u><i>Moncrief, R.</i></u> and Kaundal R<sup>*</sup>.',
     location: 'Gordon Research Conferences (Chemical & Biological Terrorism Defense); Ventura Beach Marriott, Ventura (CA), USA',
     desc: 'Artificial Intelligence-based prediction of plant host-pathogen protein interaction networks in select agents.',
-    year: '2013',
     date: 'Mar 9-10',
-    type: []
+    type: 'Invited Talk and Poster'
   },
 
   {
-    authors: '<u><i>Weirick T.</i></u>, Fathepure B.Z., Mahalingam R. and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<u><i>Weirick T.</i></u>, Fathepure B.Z., Mahalingam R. and Kaundal R<sup>*</sup>.',
     location: 'NSF EPSCoR Bioinformatics Workshop; Arkansas State University, Little Rock (AR), USA',
     desc: 'LigPred: a Comprehensive Prediction System for the Identification and Classification of Enzymes Related to the Synthesis and Degradation of Lignin.',
-    year: '2013',
     date: 'Mar 3-5',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<u><i>Kelley R.</i></u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    authors: '<u><i>Kelley, R.</i></u> and Kaundal, R<sup>*</sup>.',
     location: 'OSU Annual Research Week & Symposium (2013); Oklahoma State University, Stillwater (OK), USA',
     desc: 'Bioinformatics Approaches to Deciphering Genome-wide Host-Pathogen Protein Interaction Networks.',
-    year: '2013',
     date: 'Feb 20-21',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<u><i>Weirick T.</i></u>, Fathepure B.Z., Mahalingam R. and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<u><i>Weirick T.</i></u>, Fathepure B.Z., Mahalingam R. and Kaundal R<sup>*</sup>.',
     location: 'OSU Annual Research Week & Symposium (2013); Oklahoma State University, Stillwater (OK), USA',
     desc: 'LigPred: a Comprehensive Prediction System for the Identification and Classification of Enzymes Related to the Synthesis and Degradation of Lignin',
-    year: '2013',
     date: 'Feb 20-21',
-    type: []
+    type: ''
   }
 
 ]
@@ -114,21 +102,19 @@
 {% set pub2012 = [
 
   {
-    authors: '<u><i>Kelley R.</i></u> and <b>Kaundal, R<sup>*</sup>.</b>',
+    authors: '<u><i>Kelley, R.</i></u> and Kaundal, R<sup>*</sup>.',
     location: 'Biochemistry & Molecular Biology Annual Research Symposium (2012); Oklahoma State University, Stillwater (OK), USA',
     desc: 'Bioinformatics Approaches to Deciphering Genome-wide Host-Pathogen Protein Interaction Networks.',
-    year: '2012',
     date: 'Sep 20-21',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'Verma R.<sup>^</sup> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: 'Verma R.<sup>^</sup> and Kaundal R<sup>*</sup>.',
     location: 'The IX th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Mississippi, Oxford (MS), USA',
     desc: 'A Support Vector Machine-based prediction method to classify the plastid and non-plastid type proteins.',
-    year: '2012',
     date: 'Feb 17-18',
-    type: []
+    type: ''
   }
 
 ]
