--- a/src/views/pages/publications/subpages/dates/02-04.njk
+++ b/src/views/pages/publications/subpages/dates/02-04.njk
@@ -1,21 +1,19 @@
 {% set pub2004 = [
 
   {
-    authors: 'A.S. Kapoor and <b>R. Kaundal</b>',
+    authors: 'A.S. Kapoor and R. Kaundal',
     location: 'The 56th Annual meeting and National Symposium on Crop Surveillance: Disease Forecasting and Management; Division of Plant Pathology, Indian Agricultural Research Institute (IARI), New Delhi',
     desc: 'Development of weather based forewarning models for rice blast in Himachal Pradesh.',
-    year: '2004',
     date: 'Feb 19-21',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'A.S. Kapoor and <b>R. Kaundal</b>',
+    authors: 'A.S. Kapoor and R. Kaundal',
     location: 'National Symposium on Emerging Trends in Plant Disease Management; Department of Plant Pathology, CSK Himachal Pradesh Agricultural University, Palampur, India',
     desc: 'Development of weather-based forecasting models for rice neck blast in Himachal Pradesh.',
-    year: '2004',
     date: 'Nov 9-10',
-    type: []
+    type: ''
   }
 
 ]
@@ -24,12 +22,11 @@
 {% set pub2002 = [
 
   {
-    authors: 'Kapoor A.S., <b>Kaundal R</b> and Pratap A.',
+    authors: 'Kapoor A.S., Kaundal R and Pratap A.',
     location: 'CSK Himachal Pradesh Agricultural University (HPAU), Palampur, India',
     desc: 'Weather based forewarning of rice blast in H.P. International Conference on Challenges and Options for Sustainable Development of the Himalayas - Beyond 2002',
-    year: '2002',
     date: 'Oct 1-4',
-    type: []
+    type: ''
   }
 
 ]
