--- a/src/views/pages/publications/subpages/dates/14-16.njk
+++ b/src/views/pages/publications/subpages/dates/14-16.njk
@@ -1,30 +1,27 @@
 {% set pub2016 = [
 
   {
-    authors: 'Kupsco A., Leet J.K., Altomare D., Chen A., Stapleton H.M., Katiyar N.,<b> Kaundal R.</b>, Yu Y., Wang Y. and Volz D.C.',
+    authors: 'Kupsco A., Leet J.K., Altomare D., Chen A., Stapleton H.M., Katiyar N., Kaundal R., Yu Y., Wang Y. and Volz D.C.',
     location: 'International Symposium & Workshop: Fish and amphibian embryos as alternative models in toxicology and teratology; Aulnay-sous-Bois/Paris, France',
     desc: 'Transcriptome and DNA Methylome profiling of early Zebrafish embryos exposed to Tris (1,3-dichloro-2-propyl) phosphate.',
-    year: '2016',
     date: 'Dec 1-2',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'Kupsco A., Leet J.K., Altomare D., Chen A., Stapleton H.M., Katiyar N.,<b> Kaundal R.</b>, Yu Y., Wang Y. and Volz D.C.',
+    authors: 'Kupsco A., Leet J.K., Altomare D., Chen A., Stapleton H.M., Katiyar N., Kaundal R., Yu Y., Wang Y. and Volz D.C.',
     location: 'Toxicoepigenetics: The interface of Epigenetics and Risk assessment, Society of Toxicology meeting; Tysons (Virginia), USA',
     desc: 'Transcriptome and DNA Methylome profiling of early Zebrafish embryos exposed to Tris (1,3-dichloro-2-propyl) phosphate.',
-    year: '2016',
     date: 'Nov 2-4',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<b>Kaundal R<sup>*</sup>.</b>, <i>Hayes J., Katiyar N.</i> and <u>Liu T.</u>',
+    authors: 'Kaundal R<sup>*</sup>., <i>Hayes J., Katiyar N.</i> and <u>Liu T.</u>',
     location: 'Plant and Animal Genomes conference XXIV (PAG international); San Diego (CA), USA',
     desc: 'Centralizing bioinformatics via High-Performance Computing: applications, opportunities, and challenges in the era of large-scale -Omics data.',
-    year: '2016',
     date: 'Jan 9-13',
-    type: []
+    type: ''
   }
 
 ]
@@ -33,21 +30,19 @@
 {% set pub2015 = [
 
   {
-    authors: '<b>Kaundal R<sup>*</sup>.</b>, <i>Hayes J., Katiyar N.</i> and <u>Pham, V.</u>',
+    authors: 'Kaundal R<sup>*</sup>., <i>Hayes J., Katiyar N.</i> and <u>Pham, V.</u>',
     location: 'The XII th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Arkansas, UAMS, Little Rock (AR), USA',
     desc: 'Centralizing bioinformatics via High-Performance Computing: applications, opportunities, and challenges in the era of large-scale -Omics data.',
-    year: '2015',
     date: 'Mar 13-14',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<i> Sahu S.S., Hayes J.</i> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i> Sahu S.S., Hayes J.</i> and Kaundal R<sup>*</sup>.',
     location: 'The XII th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Arkansas, UAMS, Little Rock (AR), USA',
     desc: 'Computational prediction of single and multi-target protein subcellular localization using machine-learning approach.',
-    year: '2015',
     date: 'Mar 13-14',
-    type: []
+    type: ''
   }
 
 ]
@@ -56,30 +51,27 @@
 {% set pub2014 = [
 
   {
-    authors: '<i>Sahu S.S.</i>, Kaundal A., Rojas C.M., Lee S.,<u><i>Weirick T.</i></u>, Mysore K.S. and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i>Sahu S.S.</i>, Kaundal A., Rojas C.M., Lee S.,<u><i>Weirick T.</i></u>, Mysore K.S. and Kaundal R<sup>*</sup>.',
     location: 'American Society of Plant Biologists (ASPB) meeting; Portland, Oregon, USA',
     desc: 'Computational prediction and experimental validation of host-pathogen protein-protein interactome: a case study on Arabidopsis thaliana - Pseudomonas syringae model system.',
-    year: '2014',
     date: 'Jul 12-16',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<u><i>Weirick T.</i></u>,<i> Sahu S.S.</i>, Mahalingam R. and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<u><i>Weirick T.</i></u>,<i> Sahu S.S.</i>, Mahalingam R. and Kaundal R<sup>*</sup>.',
     location: 'The XII th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Arkansas, UAMS, Little Rock (AR), USA',
     desc: 'Predicting subtypes of laccases, an important lignin metabolism-related enzyme class, with machine learning.',
-    year: '2014',
     date: 'March 6-8',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<i>Sahu S.S.,<u> Weirick T.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i>Sahu S.S.,<u> Weirick T.</u></i> and Kaundal R<sup>*</sup>.',
     location: 'The XI th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; Oklahoma State University, Stillwater (OK), USA',
     desc: 'Prediction of Arabidopsis-Pseudomonas syringae interactome based on domain and interolog based approaches.',
-    year: '2014',
     date: 'Mar 6-8',
-    type: []
+    type: ''
   }
 
 ]
