--- a/src/views/pages/publications/subpages/dates/17-19.njk
+++ b/src/views/pages/publications/subpages/dates/17-19.njk
@@ -1,93 +1,96 @@
 {% set pub2019 = [
 
  {
-   authors: 'Phatak S.<sup>^</sup>, Thomas A., <strong>Kaundal R.</strong>, <i>Jones R.</i>, Hintze K., and Benninghoff A.',
+   authors: 'Phatak S.<sup>^</sup>, Thomas A., Kaundal R., <i>Jones R.</i>, Hintze K., and Benninghoff A.',
    location: 'The Animal, Dairy and Veterinary Sciences Summer Student Research Symposium; Utah State University (USU), Logan (UT)',
    desc: 'Impact of the Total Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of Colitis-associated Colorectal Cancer. 1st place in flash talk presentation',
-   year: '2019',
    date: 'Aug 07',
-   type: ['Oral']
+   type: 'Oral'
  },
-
  {
-   authors: '<i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+   authors: 'Phatak S.<sup>^</sup>, Thomas A., Kaundal R., <i>Jones R.</i>, Hintze K., and Benninghoff A.',
+   location: 'The Animal, Dairy and Veterinary Sciences Summer Student Research Symposium; Utah State University (USU), Logan (UT)',
+   desc: 'Impact of the Total Western Diet for Rodents on Colon Mucosal Gene Expression in a Multigenerational Murine Model of Colitis-associated Colorectal Cancer. 1st place in flash talk presentation',
+   date: 'Jun 8-11',
+   type: 'Oral'
+ },
+ {
+   authors: 'Sharma, B., Batz, T., Kaundal, R., Mellano, V and Sanders, U<sup>^</sup>',
+   location: '14th Annual Science Research Symposium; California State Polytechnic University, Pomona (CA)',
+   desc: 'Developmental, and Genetic Changes in Shoot Apical Meristem During Transition to Flowering in Aquilegia coerulea.',
+   date: 'Apr 26',
+   type: ''
+ },
+ {
+   authors: '<i><u>Loaiza C.D.</u></i> and Kaundal R<sup>*</sup>.',
    location: 'The Annual Student Research Symposium; Utah State University (USU), Logan (UT), USA',
    desc: 'Prediction of Host-Pathogen protein-protein interactions using machine learning.',
-   year: '2019',
    date: 'Apr 10-11',
-   type: ['Oral']
+   type: 'Oral'
  },
 
  {
-   authors: '<u>Lister M.</u>, <i>Larson R.B.</i> and <b>Kaundal R*.</b>',
+   authors: '<u>Lister M.</u>, <i>Larson R.B.</i> and Kaundal R*.',
    location: 'The Annual Student Research Symposium; Utah State University (USU), Logan (UT), USA',
    desc: 'Centralizing Bioinformatics via High-Performance Computing: Applications, Opportunities, and Challenges in the Era of Large-scale -Omics Data.',
-   year: '2019',
-   date: 'Aug 07',
-   type: []
+   date: 'Apr 10-11',
+   type: ''
  },
 
  {
-   authors: '<u><i>Ediriweera U.</i> </u> and <b>Kaundal R<sup>*</sup></b>',
+   authors: '<u><i>Ediriweera U.</i> </u> and Kaundal R<sup>*</sup>',
    location: 'The Annual Student Research Symposium; Utah State University (USU), Logan (UT), USA',
    desc: 'Computational Prediction of Host-Pathogen Protein Interactions in Melioidosis pathogen Burkholderia pseudomallei and Human reveals novel Virulence Factors and Infectivity Mechanisms',
-   year: '2019',
    date: 'Apr 10-11',
-   type: ['Oral']
+   type: 'Oral'
  },
 
  {
-   authors: '<u>Lister M.</u>, <i>Larson R.B.</i> and <b>Kaundal R*.</b>',
+   authors: '<u>Lister M.</u>, <i>Larson R.B.</i> and Kaundal R*.',
    location: 'The Annual Plants, Soils, and Climate Showcase, College of Agriculture and Applied Sciences; Utah State University (USU), Logan (UT), USA',
    desc: 'High-Performance Computing for Bioinformatics and the Challenges of Big -OMICS Data.',
-   year: '2019',
    date: 'Apr 02',
-   type: ['Oral']
+   type: 'Oral'
  },
 
  {
-   authors: '<b>Kaundal R<sup>*</sup>.</b>, <u><i>Duhan N.</i></u>, Acharya B., Pudussery M.V., Ferreira J.F.S., Suarez D.L. and Sandhu D<sup>*</sup>.',
+   authors: 'Kaundal R<sup>*</sup>., <u><i>Duhan N.</i></u>, Acharya B., Pudussery M.V., Ferreira J.F.S., Suarez D.L. and Sandhu D<sup>*</sup>.',
    location: 'The Annual Plants, Soils, and Climate Showcase, College of Agriculture and Applied Sciences; Utah State University (USU), Logan (UT), USA',
    desc: 'Comparative transcriptomics study of alfalfa (Medicago sativa L.) reveals novel genotype-specific salt tolerance mechanisms.',
-   year: '2019',
    date: 'Apr 02',
-   type: ['Oral']
+   type: 'Oral'
  },
 
  {
-   authors: '<i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+   authors: '<i><u>Loaiza C.D.</u></i> and Kaundal R<sup>*</sup>.',
    location: 'The Annual Plants, Soils, and Climate Showcase, College of Agriculture and Applied Sciences; Utah State University (USU), Logan (UT), USA',
    desc: 'Deciphering plant-pathogen interactomes: a study on citrus greening disease.',
-   year: '2019',
    date: 'Apr 02',
-   type: ['Oral']
+   type: 'Oral'
  },
 
  {
-   authors: '<u><i>Ediriweera U.</i> </u> and <b>Kaundal R<sup>*</sup></b>',
+   authors: '<u><i>Ediriweera U.</i> </u> and Kaundal R<sup>*</sup>',
    location: 'The 16th MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; University of Alabama, Birmingham (AL), USA',
    desc: 'Computational Prediction of Host-Pathogen Protein Interactions in Melioidosis pathogen Burkholderia pseudomallei and Human reveals novel Virulence Factors and Infectivity Mechanisms.',
-   year: '2019',
    date: 'Mar 28-30',
-   type: ['Oral']
+   type: 'Oral'
  },
 
  {
-   authors: '<i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+   authors: '<i><u>Loaiza C.D.</u></i> and Kaundal R<sup>*</sup>.',
    location: 'The Plant and Animal Genome XXVII International Conference (PAG); Town and Country Hotel, San Diego (California), USA',
    desc: 'An integrated in silico approach to explore Citrus and HLB host- pathogen interactions.',
-   year: '2019',
    date: 'Jan 12-16',
-   type: []
+   type: ''
  },
 
  {
-   authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, <b>Kaundal R.<sup>*</sup></b>, Thomas, A.J., Benninghoff, A.D. and Isom, C.',
+   authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, Kaundal R.<sup>*</sup>, Thomas, A.J., Benninghoff, A.D. and Isom, C.',
    location: 'The 45 th Annual International Embryo Transfer Society Conference; Sheraton Hotel, New Orleans (LA), USA',
    desc: 'Gene expression analysis and DNA methylation patterns of porcine SCNT blastocysts with high and low incidence of apoptosis.',
-   year: '2019',
    date: 'Jan 20-23',
-   type: ['Oral', 'Poster']
+   type: 'Oral, Poster'
  }
 
 ]
@@ -96,76 +99,68 @@
 {% set pub2018 = [
 
   {
-    authors: '<i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i><u>Loaiza C.D.</u></i> and Kaundal R<sup>*</sup>.',
     location: 'The 16th Annual Rocky Mountain Bioinformatics Conference; Viceroy Hotel, Aspen/Snowmass (CO), USA',
     desc: 'PredHPI: an integrated web-server platform for the prediction and visualization of host-pathogen interactions.',
-    year: '2018',
     date: 'Dec 6-8',
-    type: ['Oral', 'Poster']
+    type: 'Oral, Poster'
   },
 
   {
-    authors: 'Mohammadi M<sup>$</sup>., Smith E<sup>$^</sup>., Stanghellini M. and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: 'Mohammadi M<sup>$</sup>., Smith E<sup>$^</sup>., Stanghellini M. and Kaundal R<sup>*</sup>.',
     location: 'The XVth MidSouth Computational Biology & Bioinformatics Society (MCBIOS) Annual Conference; Mississippi State University, Starkville (MS), USA',
     desc: 'Complete genome sequence of Pythium brassicum P1, an oomycete root pathogen: insights into its host specificity to Brassicaceae.',
-    year: '2018',
     date: 'March 29-31',
-    type: ['Invited']
+    type: 'Invited'
   },
 
   {
-    authors: '<i>Sahu S.S</i>, <i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i>Sahu S.S</i>, <i><u>Loaiza C.D.</u></i> and Kaundal R<sup>*</sup>.',
     location: 'The XVth MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; Mississippi State University, Starkville (MS), USA',
     desc: 'Plant-mSubP: a computational framework for the prediction of single and multi-location protein subcellular localization using integrated machine learning approaches',
-    year: '2018',
     date: 'March 29-31',
-    type: []
+    type: ''
   },
 
   {
-    authors: '<i>Sahu S.S</i>, <i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    authors: '<i>Sahu S.S</i>, <i><u>Loaiza C.D.</u></i> and Kaundal R<sup>*</sup>.',
     location: 'Plants, Soils, and Climate Student Showcase; College of Agriculture and Applied Sciences (CAAS); Utah State University, Logan (UT), USA',
     desc: 'Plant-mSubP: a computational framework for the prediction of single and multi-location protein subcellular localization using integrated machine learning approaches',
-    year: '2018',
     date: 'March 19',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'Batz T.,<b> Kaundal R.</b>, Mellano V. and Sharma,',
+    authors: 'Batz T., Kaundal R., Mellano V. and Sharma,',
     location: 'The 99th Annual Pacific Division meeting of AAAS (American Association for the Advancement of Science); California State Polytechnic University, Pomona (CA), USA',
     desc: 'Molecular and Morphological Analysis of the Floral Transition in Aquilegia coerulea.',
-    year: '2018',
     date: 'Jun 12-15',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, <b>Kaundal R.<sup>*</sup></b>, Thomas, A.J., Benninghoff, A.D. and Isom, C.',
+    authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, Kaundal R., Thomas, A.J., Benninghoff, A.D. and Isom, C.',
     location: 'The 51 st Annual Meeting of the Society for the Study of Reproduction (SSR); Hilton New Orleans Riverside, New Orleans (LA), USA',
     desc: 'RNA-Seq analysis of porcine SCNT blastocysts with high and low incidence of apoptosis.',
-    year: '2018',
     date: 'Jan 10-13',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, <b>Kaundal R.<sup>*</sup></b>, Thomas, A.J., Benninghoff, A.D. and Isom, C.',
+    authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, Kaundal R., Thomas, A.J., Benninghoff, A.D. and Isom, C.',
     location: 'The 7th Annual ADVS Student Research Symposium; Utah State University, Logan (UT), USA',
     desc: 'Gene expression analysis and DNA methylation patterns of porcine SCNT blastocysts with high and low incidence of apoptosis.',
-    year: '2018',
     date: 'Aug 8',
-    type: ['Oral']
+    type: 'Oral'
   },
 
   {
-    authors: 'Sandhu D., Cornacchione M.V., Pudussery M., Kaundal A., <b> Kaundal R.</b>, Ferreira J.F.S. and Suarez
+    authors: 'Sandhu D., Cornacchione M.V., Pudussery M., Kaundal A., Kaundal R., Ferreira J.F.S. and Suarez
             D.L.',
     location: 'Punjab Agricultural University (PAU), Ludhiana (Punjab), India.',
     desc: 'Genetic analysis of salinity responses in Medicago genotypes.',
-    year: '2018',
     date: 'Jan 15',
-    type: ['Invited']
+    type: 'Invited'
   }
 
 ]
@@ -173,22 +168,20 @@
 
 {% set pub2017 = [
   {
-    authors: 'Sandhu D., Pudussery M., <b>Kaundal R.</b> and Suarez D.L.',
+    authors: 'Sandhu D., Pudussery M., Kaundal R. and Suarez D.L.',
     location: 'The ASA, CSSA & SSSA International Annual Meetings; Tampa (Florida), USA',
     desc: 'Molecular analysis of the Na+/H+ exchanger gene family and its role in salt stress in Medicago truncatula.',
-    year: '2017',
     date: 'Oct 22-25',
-    type: []
+    type: ''
   },
 
   {
-    authors: 'Kupsco A., Leet J.K., Altomare D., Chen A., Stapleton H.M., Katiyar N.,<b> Kaundal R.</b>, Yu Y., Wang
+    authors: 'Kupsco A., Leet J.K., Altomare D., Chen A., Stapleton H.M., Katiyar N., Kaundal R., Yu Y., Wang
             Y. and Volz D.C.',
     location: '56th Annual Meeting and ToxExpo, Society of Toxicology; Baltimore (Maryland), USA',
     desc: 'Transcriptome and DNA Methylome profiling of early Zebrafish embryos exposed to Tris (1,3-dichloro-2-propyl) phosphate.',
-    year: '2017',
     date: 'Mar 12-16',
-    type: []
+    type: ''
   }
 ]
 %}
