Added tools page buttons.

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -13,8 +13,8 @@
     email: "rousselene.larson@usu.edu",
     img: "/image/raw/bioinfo/profile/2.jpg",
     social: [
-      {type: "twitter", link: "https://twitter.com/rousselene"},
-      {type: "linkedin", link: "https://www.linkedin.com/feed/"}
+      {type: "linkedin", link: "https://www.linkedin.com/feed/"},
+      {type: "twitter", link: "https://twitter.com/rousselene"}
     ]
   }
 %}
@@ -56,6 +56,7 @@
     email: "naveen.duhan@usu.edu",
     img: "/image/raw/bioinfo/profile/1.jpg",
     social: [
+	  {type: "google", link:"https://scholar.google.com/citations?hl=en&user=kvf8JJQAAAAJ"},
       {type: "researchgate", link: "https://www.researchgate.net/profile/Naveen_Duhan"},
       {type: "facebook", link: "https://www.facebook.com/navduhan87/"},
       {type: "twitter", link: "https://twitter.com/navduhan"},
@@ -137,9 +138,9 @@
     email: "itsme@shelbymccowan.com",
     img: "/image/raw/bioinfo/profile/shelby.jpg",
     social: [
-      {type: "website", link: "https://shelbymccowan.com"},
       {type: "linkedin", link: "https://www.linkedin.com/in/shelby-mccowan-44718a166/"},
-      {type: 'github', link: 'https://github.com/MusicDev33'}
+      {type: 'github', link: 'https://github.com/MusicDev33'},
+      {type: "website", link: "https://shelbymccowan.com"}
     ]
   }
 %}
@@ -229,9 +230,10 @@
     email: "raghav.kataria@usu.edu",
     img: "/image/aspect/people/raghav/raghav2.jpg?a=c&w=5&h=6",
     social: [
+	  {type: "google", link: "https://scholar.google.com/citations?user=_tz_cHsAAAAJ&hl=en"},
+      {type: "orcid", link: "https://orcid.org/0000-0002-1355-3187"},
       {type: "researchgate", link: "https://www.researchgate.net/profile/Raghav_Kataria"},
-      {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-14458211b/"},
-      {type: "orcid", link: "https://orcid.org/0000-0002-1355-3187"}
+      {type: "linkedin", link: "https://www.linkedin.com/in/raghav-kataria-14458211b/"}
     ]
   }
 %}
