--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -20,8 +20,20 @@
       </div>
     </div>
   </article>
+<article class="container">
+<div class = "row justify-content-center">
+<div class="col-12 mb-4">
+	<a href="tools#hpi" class="btn btn-md btn-block btn-primary  my-1">Host-Pathogen Interaction Prediction Tools</a>
+	<a href="tools#cellularloc" class="btn btn-md btn-block btn-danger  my-1">Cellular Localization Prediction Tools</a>
+	<a href="tools#metagenomics" class="btn btn-md btn-block btn-success my-1 ">Metagenomics</a>
+	<a href="tools#db" class="btn btn-md btn-block btn-info my-1">Databases</a>
+	<a href="tools#bionrg" class="btn btn-md btn-block btn-secondary my-1 ">Bioenergy</a>
+	<a href="tools#misc" class="btn btn-md btn-block btn-warning my-1">Miscellaneous</a>
+</div>
+</div>
+</article>
 
-  <article class="container">
+<article class="container">
     {% from "./_tool-section.njk" import toolSection %}
     {% from "./_tool-data.njk" import hpi, clpt, metagenomics, dbs, bioenergy, misc %}
 
