--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -87,7 +87,7 @@
             {{ personCard("/image/raw/bioinfo/profile/2.jpg", "Rousselene B. Larson", "Bioinformatics Scientist") }}
           </div>
           <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-            {{ personCard("/image/raw/bioinfo/profile/shelby.jpg", "Shelby McCowan", "Systems Administrator") }}
+            {{ personCard("/image/raw/bioinfo/profile/colin.jpg", "Colin Bernhardt", "HPC Systems Administrator") }}
           </div>
           <div class="col-12 col-md-4 col-sm-6 col-lg-3">
             {{ personCard("/image/raw/people/raghav/raghav.jpg", "Raghav Kataria", "PhD Student | PSC") }}
