Updated papers, underline icon, wordings, etc.

--- a/src/scss/components/_pub-legend.scss
+++ b/src/scss/components/_pub-legend.scss
@@ -25,3 +25,10 @@
   font-size: 110%;
   font-weight: 600;
 }
+
+.underline-slanted-solid {
+  background: url('http://bioinfocore.usu.edu/raikou/image/bioinfo/underline-slanted-solid.png');
+  height: 20px;
+  width: 20px;
+  display: block;
+}
