--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -11,7 +11,7 @@
   {{ imgHeader() }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'events', link: '/events'}]) }}
+  {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Events', link: '/events'}]) }}
 
   {% from "components/event-link.njk" import eventLink %}
   <article>
