--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -11,7 +11,7 @@
   {{ imgHeader() }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'people', link: '/people'}]) }}
+  {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'People', link: '/people'}]) }}
 
   <article class="container">
     {% include "./_new-rakesh.njk" %}
