--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -12,7 +12,7 @@
   {{ imgHeader() }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'research', link: '/research'}]) }}
+  {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Research', link: '/research'}]) }}
 
   <main>
       <div class="container">
