--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -15,7 +15,7 @@
       <div class="col-auto pt-3 header-icon-wrapper text-center text-md-start">
         <h1>Tools</h1>
         <h6>
-          Services straight from students at KAABiL
+          Software and Databases developed by KAABiL Researchers
         </h6>
       </div>
     </div>
