--- a/src/views/components/pub-legend.njk
+++ b/src/views/components/pub-legend.njk
@@ -18,7 +18,8 @@
 
     <span class="fa-stack pub-legend-container"  id="underline">
       <i class="fas fa-square fa-stack-2x"></i>
-      <i class="fas fa-underline fa-stack-1x pub-legend-icon"></i>
+      <!-- I probably shouldn't be doing this, but I need to get a slanted underline icon. -->
+      <i class="pub-legend-icon"><img src="http://bioinfocore.usu.edu/raikou/image/bioinfo/underline-slanted-solid.png" style="right:20" width="62%"></i>
     </span>
     
     <span class="fa-stack pub-legend-container"  id="italic">
