--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -11,7 +11,7 @@
   {{ imgHeader() }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'news', link: '/news'}]) }}
+  {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'News', link: '/news'}]) }}
 
   <article class="container-fluid px-5 pb-5 pt-1 my-5">
     <div class="row">
