--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -11,7 +11,7 @@
   {{ imgHeader() }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'publications', link: '/publications'}]) }}
+  {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Publications', link: '/publications'}]) }}
 
   {% from "components/publication.njk" import publication %}
   {% from "./_data.njk" import pub2022,pub2021, pub2020, pub2019, pub2018, pub2016, pub2014, pub2013, pub2010, pub2009, pub2007, pub2006, pub2005 %}
