Added team image to home page and created new events.

--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -39,6 +39,17 @@
             %}
             {{ eventLink(pag2020) }}
           </div>
+          <div class="col-sm-6">
+            {% set shelby = {
+                link: '/events/farewellShelby',
+                title: "Shelby\'s Farewell",
+                location: '4700 Old Main Hill Logan, UT 84322',
+                date: 'Nov 29, 2021',
+                img: '/image/bioinfo/events/farewellShelby/IMG_6824.JPG'
+              }
+            %}
+            {{ eventLink(shelby) }}
+          </div>
         </div>
       </section>
 
@@ -55,6 +66,17 @@
               }
             %}
             {{ eventLink(pag2020) }}
+          </div>
+          <div class="col-sm-6">
+            {% set cristian = {
+                link: '/events/farewellCristian',
+                title: "Cristian\'s Farewell",
+                location: '4700 Old Main Hill Logan, UT 84322',
+                date: 'July 1, 2020',
+                img: '/image/bioinfo/events/farewellCristian/IMG_3702.JPG'
+              }
+            %}
+            {{ eventLink(cristian) }}
           </div>
         </div>
       </section>
