--- a/src/views/pages/events/template.njk
+++ b/src/views/pages/events/template.njk
@@ -20,7 +20,7 @@
           </section>
           <section class="text-start">
             {% include (file) %}
-            <h3 class="kbl-heading pt-4">From Media</h3>
+            <h3 class="kbl-heading pt-4">From Media</h3
           </section>
           <section class="row">
             {% for pic in event.media %}
