--- a/src/views/pages/home/_head-carousel.njk
+++ b/src/views/pages/home/_head-carousel.njk
@@ -87,6 +87,20 @@
                             <a href="#" class="btn-link btn-more">READ MORE</a>
                         </div>
                     </li>
+                        <li class="seq-step1" id="step5" style="background-color: black;">
+                        <img class="fix-picture" src="{{ RaikouServer }}/image/bioinfo/slider/homePageTeam.jpg"/>
+                        <div class="bg-blend"></div>
+                        <div class="seq-content">
+
+                            <h2 class="seq-title font-2 tt_up" style="font-size: 25px;" data-seq=""> Meet the Lab Members</h2>
+                            <div class="seq-meta" data-seq="">
+                                <p class="seq-meta-text" style="font-size: 12px;"> We have a wide variety of people, with diverse skill sets at the 
+                                    KAABiL lab. They range from graduate students to undergraduates, all from a wide variety of disciplines.
+                                </p>
+                            </div>
+                            <a href="people" class="btn-link btn-more">READ MORE</a>
+                        </div>
+                    </li>
                 </ul>
                 <div class="sec-navigate-wrap center-y">
                     <button type="button" class="seq-next"></button>
