--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -29,6 +29,7 @@
               <span class="tab-select-option {% if (content == 'pub') %}selected{% endif %}" id="pub">Papers</span>
               <span class="tab-select-option {% if (content == 'conf') %}selected{% endif %}" id="conf">Conferences</span>
               <span class="tab-select-option {% if (content == 'edit') %}selected{% endif %}" id="edit">Editorials</span>
+              <a href="https://scholar.google.com/citations?user=Vu1-tr8AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer noopener" class="kbl-icon-google correct-fa align-middle"><i class="ai ai-google-scholar-square" style="scale:0.8"></i></a>
             </div>
 
             <div class="kbl-tab-selector-mobile d-md-none px-0">
