Split images on people page and added X butoon to event modal.

--- a/src/views/components/event-modal.njk
+++ b/src/views/components/event-modal.njk
@@ -3,6 +3,12 @@
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content event-modal-container">
       <section class="container-fluid py-4">
+        <div class="row no-gutters justify-content-end">
+          <div class="col-auto">
+            <div class="modal-btn-container h-100">
+              <i class="fas fa-times-circle fa-3x modal-btn"></i>
+          </div>
+        </div>
         <div class="row no-gutters">
           <div class="col-auto">
             <div class="modal-btn-container h-100">
