--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -11,7 +11,7 @@
   {{ imgHeader() }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'contact', link: '/contact'}]) }}
+  {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Contact', link: '/contact'}]) }}
 
   <article class="container mt-5">
     <section class="row">
