--- a/src/views/pages/research/research-areas/research-areas.njk
+++ b/src/views/pages/research/research-areas/research-areas.njk
@@ -11,7 +11,7 @@
   {{ imgHeader() }}
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([{name: 'home', link: '/'}, {name: 'research', link: '/research'}, {name: 'research areas', link: '/research/research-areas'}]) }}
+  {{ breadcrumb([{name: 'Home', link: '/'}, {name: 'Research', link: '/research'}, {name: 'Research Areas', link: '/research/research-areas'}]) }}
 
   <article class="container mt-5">
     <div class="row justify-content-center">
