Updated tools page to have new sections and tools.

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -41,21 +41,21 @@
 %}
 
 {% set greeningDB = {
-    img: "/image/bioinfo/tools/citrus4.jpg",
+    img: "/image/bioinfo/tools/greeningdb.png",
     title: "GreeningDB",
     link: "http://bioinfo.usu.edu/GreeningDB/"
   }
 %}
 
 {% set citSATdb = {
-    img: "/image/bioinfo/tools/citsat.jpg",
+    img: "/image/bioinfo/tools/citsatdb.png",
     title: "citSATdb",
     link: "http://bioinfo.usu.edu/citSATdb/"
   }
 %}
 
 {% set legumeSSRdb = {
-    img: "/image/bioinfo/tools/beans.jpg",
+    img: "/image/bioinfo/tools/legumessdb.png",
     title: "legumeSSRdb",
     link: "http://bioinfo.usu.edu/legumeSSRdb"
   }
@@ -111,21 +111,21 @@
 %}
 
 {% set ranchSAT = {
-    img: "/image/bioinfo/tools/ranchsat.jpg",
+    img: "/image/bioinfo/tools/ranchsatdb.png",
     title: "ranchSATdb",
     link: "http://bioinfo.usu.edu/ranchSATdb/"
   }
 %}
 
 {% set alfaNet = {
-    img: "/image/bioinfo/tools/alfalfa.jpg",
+    img: "/image/bioinfo/tools/alfanet.png",
     title: "alfaNET",
     link: "http://bioinfo.usu.edu/alfanet/"
   }
 %}
 
 {% set weconet = {
-    img: "/image/bioinfo/tools/wheat1.jpg",
+    img: "/image/bioinfo/tools/weconet.png",
     title: "WeCoNET",
     link: "http://bioinfo.usu.edu/weconet/"
   }
@@ -139,7 +139,7 @@
 %}
 
 {% set trustdb = {
-    img: "/image/bioinfo/tools/trustdb.jpg",
+    img: "/image/bioinfo/tools/trustdb2.png",
     title: "TRustDB",
     link: "http://bioinfo.usu.edu/trustdb/"
   }
@@ -152,10 +152,26 @@
   }
 %}
 
+{% set ProFeatX= {
+    img: "/image/bioinfo/tools/profeatx.png",
+    title: "ProFeatX",
+    link: "http://bioinfo.usu.edu/profeatx/"
+  }
+%}
+
+{% set pySeqRNA= {
+    img: "/image/bioinfo/tools/pyseqrna.png",
+    title: "pySeqRNA",
+    link: "http://bioinfo.usu.edu/pyseqrna/"
+  }
+%}
+
 
 {% set hpi = [predhpi, apinet, deepHPI, huco, malivhu, HuCoVarIA] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
 {% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet, weconet, trustdb] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
 {% set metagenomics = [necMiner] %}
+{% set ngsPackages = [ProFeatX] %}
+{% set descriptors = [pySeqRNA] %}
 {% set misc = [rbPred] %}
