--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -37,6 +37,8 @@
     {name: "Metagenomics", link: "/tools#metagenomics"},
     {name: "Databases", link: "/tools#db"},
     {name: "Bioenergy", link: "/tools#bionrg"},
+    {name: "NGS Packages", link: "/tools#ngsPack"},
+    {name: "Descriptors", link: "/tools#descriptors"},
     {name: "Miscellaneous", link: "/tools#misc"}
   ],
   link: "/tools"
