Centralized links and made home page slider autoscroll.

--- a/src/views/components/home-paper.njk
+++ b/src/views/components/home-paper.njk
@@ -4,9 +4,9 @@
         <i class="ion-ios-paper-outline"></i>
     </div>
     <div class="content-wrapper">
-        <h3 class="title mb_0">{{paper.authors | safe}}<sup>*</sup>.</h3>
+        <h3 class="title mb_0">{{paper.authors | safe}} {{paper.year}}.</h3>
         <div class="slc_des">
-            <div class="authr">{{paper.content | safe}}
+            <div class="authr">{{paper.content | safe}} {{paper.year}}.
             </div>
         </div>
         <div class="description">
