--- a/src/views/pages/home/_head-carousel.njk
+++ b/src/views/pages/home/_head-carousel.njk
@@ -1,6 +1,6 @@
 <div class="sabbi-site-header-meta">
     <div class="site-hmsl-content text-center mt_60">
-        <div class="seq seq--kawsa" id="sequence">
+        <div class="seq seq--kawsa" id="sequence1">
             <div class="seq-screen">
                 <ul class="seq-canvas">
                     <li class="seq-step1" id="step1"
@@ -16,7 +16,7 @@
                                     engineering, and related disciplines to train the next generation of data
                                     scientists...</p>
                             </div>
-                            <a href="#" class="btn-link btn-more">READ MORE</a>
+                            <a href="research" class="btn-link btn-more">READ MORE</a>
                         </div>
                     </li>
                     <li class="seq-step1" id="step2"
@@ -35,7 +35,7 @@
                                     implement as databases and prediction tools...
                                 </p>
                             </div>
-                            <a href="#" class="btn-link btn-more">READ MORE</a>
+                            <a href="research" class="btn-link btn-more">READ MORE</a>
                         </div>
                     </li>
                     <li class="seq-step1" id="step2" style="background-color: black;">
@@ -52,7 +52,7 @@
                                     explore cross-kingdom threats and identify novel...
                                 </p>
                             </div>
-                            <a href="#" class="btn-link btn-more">READ MORE</a>
+                            <a href="research" class="btn-link btn-more">READ MORE</a>
                         </div>
                     </li>
                     <li class="seq-step1" id="step3" style="background-color: black;">
@@ -68,7 +68,7 @@
                                     enzyme encoding genes involved in Nitrogen (N)
                                     cycle from soil metagenomes...</p>
                             </div>
-                            <a href="#" class="btn-link btn-more">READ MORE</a>
+                            <a href="research" class="btn-link btn-more">READ MORE</a>
                         </div>
                     </li>
                     <li class="seq-step1" id="step4"
@@ -84,7 +84,7 @@
                                     bioinformatics data mining to complex NGS projects such as RNA-seq,
                                     ChIP-seq, SNP-seq, Methyl-seq, miRNA-seq, GBS, Genome Assembly, etc...</p>
                             </div>
-                            <a href="#" class="btn-link btn-more">READ MORE</a>
+                            <a href="research" class="btn-link btn-more">READ MORE</a>
                         </div>
                     </li>
                         <li class="seq-step1" id="step5" style="background-color: black;">
@@ -108,5 +108,7 @@
                 </div>
             </div>
         </div>
+        <script src="assets/js/kbl/head_carousle_seq.js"></script>
     </div>
+</div>
 </div>
