--- a/src/views/pages/people/_new-rakesh.njk
+++ b/src/views/pages/people/_new-rakesh.njk
@@ -6,25 +6,32 @@
           <img class="w-100 mb-2" style="height: 220px;" src="{{ RaikouServer }}/image/raw/bioinfo/profile/RK_2.jpg">
           <figcaption class="pb-2 px-3">
             <div clas="title-wrapper">
-              <div class="contact-title mb-0"><b>Phone: </b><span class="contact-desc">+1 (435) 797-4117</span></div>
-              <div class="contact-title"><b>Email: </b><span class="contact-desc">rkaundal@usu.edu</span></div>
+              <div class="contact-title mb-0 text-center"><b>Phone: </b><span class="contact-desc">+1 (435) 797-4117</span></div>
+              <div class="contact-title text-center"><b>Email: </b><span class="contact-desc">rkaundal@usu.edu</span></div>
             </div>
-            <span class="kbl-social-wrapper">
+            <div class="row justify-content-center">
+              <div class="col-auto gx-1">
               <a href="https://scholar.google.com/citations?user=Vu1-tr8AAAAJ&hl=en&oi=ao" target="_blank" rel="noreferrer noopener"
                   class="kbl-icon-google align-middle">
                 <i class="ai ai-google-scholar-square ai-lg"></i>
               </a>
+              </div>
+              <div class="col-auto gx-1">
               <a href="https://orcid.org/0000-0001-8683-1240" target="_blank" rel="noreferrer noopener" class="kbl-icon-orcid align-middle">
                 <i class="ai ai-orcid-square ai-lg"></i>
               </a>
+              </div>
+              <div class="col-auto gx-1">
               <a href="https://www.researchgate.net/profile/Rakesh_Kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-researchgate align-middle">
                 <i class="ai ai-researchgate-square ai-lg"></i>
               </a>
+              </div>
+              <div class="col-auto gx-1">
               <a href="https://www.linkedin.com/in/r-kaundal" target="_blank" rel="noreferrer noopener" class="kbl-icon-linkedin align-middle">
                 <i class="fab fa-linkedin ai-lg"></i>
               </a>
-
-            </span>
+              </div>
+            </div>
           </figcaption>
         </figure>
       </div>
