--- a/src/views/universal/_footer-scripts.njk
+++ b/src/views/universal/_footer-scripts.njk
@@ -5,6 +5,7 @@
 <script src="assets/tools/sequence/js/imagesloaded.pkgd.min.js"></script>
 <script src="assets/tools/sequence/js/hammer.min.js"></script>
 <script src="assets/tools/sequence/js/sequence.min.js"></script>
+<script src="assets/tools/sequence/js/sequence-theme.basic.js"></script>
 <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 <!-- site-spec -->
 <script src="assets/js/main.js"></script>
