--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -72,7 +72,7 @@
           </a>
         </div>
         <div class="my-2">
-          <a href="publications/conferences" target="_blank" rel="noopen noreferrer" class="footer-link">
+          <a href="publications/?content=conf" target="_blank" rel="noopen noreferrer" class="footer-link">
             Conferences and Talks
           </a>
         </div>
